[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "my-dev"
version = "0.1.0"
description = "tools"
authors = ["test@example.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.0"
pyyaml = "^6.0"
deepeval = "3.7.5"
duckdb = "1.4.3"
pyarrow = "22.0.0"
sqlglot = "26.9.0"
networkx = "3.6.1"
requests = "2.32.5"
minio = "7.2.20"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"

[tool.poetry.scripts]
my-tool = "my_dev.cli:main"
