[tool.poetry]
name = "spark-pyspark-app"
version = "1.0.0"
description = "Spark PySpark application with S3 and Iceberg support"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
# 核心 Spark 依赖
pyspark = {version = "3.5.5", extras = ["sql", "connect", "pandas_on_spark"]}
# 数据科学核心库
pandas = "^2.0.0"
numpy = "^1.24.0"
pyarrow = "^15.0.0"
# Web 和工具
requests = "^2.31.0"
python-dotenv = "^1.0.0"
# 图计算
graphframes-py = "^0.10.0"
# 工作流管理
metaflow = "^2.19.7"
# daft
daft = { version = "^0.6.12", extras = ["lance","postgres","sql","unity","ray","openai"] }
# sql parse
sqlglot = "^21.0.0"
# pg 和 向量相似性搜索扩展
psycopg-binary = "^3.1.0"
pgvector = "^0.2.0"
# mysql
mysql-connector-python = "^8.1.0"
# duckdb
duckdb = "^1.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
